force-app/main/default/objects/CS_Bypass__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setup tool to configure whether a user can execute trigger, workflow rule, validation rule or process builder</description>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Process Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassTrigger__c</fullName>
        <label>Bypass Trigger</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BypassValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassWorkflows__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Workflows</label>
        <type>Checkbox</type>
    </fields>
    <label>CS_Bypass</label>
</CustomObject>